--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -115,6 +115,7 @@ footer p a:hover{
     background-color:#3d405b;
     color: #e8e8e8;
     text-decoration: underline;
+    text-decoration: none;
 }    
 
 
