--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -1,14 +1,54 @@
+header {
+    display: grid;
+    grid-template-columns: 150px auto;
+    background-color:#e07b5f; 
+    text-decoration: none;
+    color: #ffffff;
+}
 
+
+nav {
+    display: flex;
+    justify-content: space-around;
+}
+    
+#logo_link {
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;
+}
 #content{
     max-width:1600px;
     margin: 0 auto;
 
 }
 
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px; 
+}
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+             
+
 
 #hero-msg h1,
 #hero-msg h4 {
     text-align: center;
+    
+}
+#hero-msg h4 {
+    color: white;
 }
 
 .button-box {
@@ -18,6 +58,10 @@
 main section {
     text-align: center;
     box-sizing: border-box;
+}
+.home-grid{
+    display: grid;
+    grid-template-columns:repeat(10, 1fr);
 }
 
 #background {
@@ -54,11 +98,6 @@ h2 {
     margin: 0;
     color: #f6f5f5;
 
-}
-header {
-    background-color:#e07a5f; 
-    text-decoration: none;
-    color: #ffffff;
 }
 
 nav a {
@@ -113,18 +152,24 @@ p{
 .book, .join{
     background-color: #f4f1de;
     color: #000000;
+    border:2px solid black;
 }
 h4{
    color:#3d405b;
    
 }
 
+
 footer {
     background-color: #e07a5f; 
     color: #000000;  
     font-size: 1.2em;
+
     padding: 25px 50px;
-    margin-top: 200px;
+    margin-top: 200px; 
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 footer p a{
@@ -151,10 +196,12 @@ footer p a:hover{
 
 .home-title {
     font-family: 'Rock Salt', 'Bradley Hand', sans-serif;
-    font-size: 2em;
+    font-size: 3em;
     margin-top: 10px;
-    color:#e07a5f;
+    color:#e15a35;
     line-height: 1.5em;
+    -webkit-text-stroke: 1.5px rgb(201, 196, 196);
+    
 
 }
          
@@ -185,16 +232,112 @@ footer{
 
 .rivers-card, .camping-card, .rapids-card{
     margin: 200px 0;
+    display: grid;
+   
+
 }
 
+
+.rivers-card {
+    grid-column: 2 / 4;
+    grid-row: 2 / 3;
+}
+
+.camping-card {
+    grid-column: 5 / 7;
+    grid-row: 2 / 3;
+}
+
+.rapids-card {
+    grid-column: 8 / 10;
+    grid-row: 2 / 3;
+}
+
+#background {
+    grid-column: 1 /  11;
+    grid-row: 4 / 9;
+}
+
+.mountains {
+    grid-column: 2 / 7;
+    grid-row: 5 / 8;
+}
+
+.msg {
+    grid-column: 6 / 10;
+    grid-row: 6 / 7;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.card-img,
+.mountains {
+    width: 100%;
+}
 .card-img{
-    border: 10px solid  #6f7364;;
+    border: 10px solid  #6f7364;
+    width: 100%;
+    border: 10px solid #d9c2a3;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
 }
-
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+.mountains {
+    width: 100%;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+             
 main section img {
     box-sizing: border-box;
 }
 
 footer .social img{
     padding-top: 15px;
+}
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 45px;
+        color:#e15a35;
+        line-height: 1.5em;
+        -webkit-text-stroke: 1.5px rgb(201, 196, 196);
+     
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
