--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -214,11 +214,11 @@ footer p a:hover{
 
 .msg p {
     padding-bottom: 15px;
-    font-size: 2em;
+    font-size: 1.5em;
 }
 
 .msg {
-    background-color: #6f7364;
+    background-color: #3d405b;
     line-height: 1.5em;
     padding: 35px;
   }
@@ -266,7 +266,8 @@ footer{
 .msg {
     grid-column: 6 / 10;
     grid-row: 6 / 7;
-    box-shadow: 5px 5px 10px #6f7364;
+    box-shadow: 5px 5px 10px #00000052;
+    border-radius: 10px;
 }
 
 .card-img,
@@ -286,7 +287,7 @@ footer{
 }
 .mountains {
     width: 100%;
-    box-shadow: 5px 5px 10px #6f7364;
+    box-shadow: 5px 5px 10px#3d405b;
 }
              
 main section img {
