--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -70,7 +70,7 @@ main section {
 }
      
 .social-media-icon {
-    width: 60px;
+    width: 40px;
 }
 .logo, 
 .icon{
@@ -111,7 +111,7 @@ nav a {
 
 }
 nav a:hover {
-    background-color:	#3d405b	;
+    background-color:#3d405b;
     color: white; 
 }
 
@@ -341,4 +341,201 @@ footer .social img{
     footer {
         margin-top: 25px;
     }
+}
+
+
+
+
+
+/**Contact Page*/
+
+#banner  {
+    width: 100%;
+    height: 90%;
+}
+.banner-tittle {
+    display: grid;
+    color: white;
+    margin-top: 160px;
+    font-size: 100px;
+    text-align: center; 
+}
+.cnt-us{
+    font-size: large;
+    width:400px;
+    height: 30px;
+    margin-bottom: 20px;
+    border-radius: 10px;
+    border: 2px solid transparent;
+}
+
+.cnt-us:hover, .msg-txt:hover{
+box-shadow: 12px 12px 12px rgba(0, 0, 0, 0.094);
+}
+.msg-txt{
+    font-size: large;
+
+    width: 400px;
+    margin-bottom: 20px;
+    border-radius: 10px;
+    border: 2px solid transparent;
+
+}
+
+.cnt-container {
+    margin: 10px 0;
+    display: grid;
+    grid-column: 4 / 4;
+    grid-row: 1/ 3;
+}
+
+.sbt-cnt{
+    font-size: 17px;
+    padding: 0.5em 2em;
+    border: transparent;
+    box-shadow: 2px 2px 4px rgba(0,0,0,0.4);
+    background:#e15a35;
+    color: white;
+    border-radius: 4px;
+   }
+   
+   .sbt-cnt:hover {
+    background: #3d405b;
+   }
+   
+   .sbt-cnt:active {
+    transform: translate(0em, 0.2em);
+   }
+
+.social-cnt{
+    display:inline-block;
+    width: 400px;
+    
+}
+
+.ctn-p{
+    color:#000000c2;
+    font-size: 16px;
+    width: 400px;
+    justify-content:center;
+}
+
+
+.sm-ctn{
+    width: 400px;
+    grid-column: 7 / 7;
+    grid-row: 1 / 3;
+    
+}
+
+.social-cn{
+    width: 50px;
+}
+
+.social-cn:hover{
+    width: 70px;
+    cursor:pointer;
+    
+}
+
+.tl-ctn{
+    text-align: center;
+    
+}
+
+a{
+    text-decoration: none;
+}
+.txt-ctn{
+    width: 400px;
+   font-size: 20px;
+   color: #0000009b;
+   margin-bottom: 30px;
+}
+.msg-book{
+    width: 600px;
+    margin: 0 auto;
+    
+}
+
+.msg-2 {
+    display: flex;
+    flex-direction: column; 
+    align-items: center;
+    width: 50%;
+    background-color: #3d405b;
+    padding: 40px;
+    margin: 120px auto 0; 
+    border-radius: 20px;
+    text-align: center; 
+}
+
+
+.img-msg-2 {
+    margin: -160px auto 0;
+    display: block;
+    border-radius: 30px;
+    width: 500px;
+
+}
+
+.join-p2{
+    text-align: center;
+    color:#000000;
+    text-decoration: none;
+    background-color: #f4f1de;
+    text-decoration:none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px ;
+
+}
+
+.join-p2:hover {
+    background-color:#3d405b; 
+    color: white;
+}
+
+
+
+@media screen and (max-width: 900px) {
+    .banner-tittle {
+        margin-top: -180px;
+        font-size: 65px;
+    }
+    .frm{
+        margin-top: 140px;
+
+    }
+    .cnt-us, .msg-txt {
+        width: 300px;
+
+    }
+    .cnt-container {
+        width: 500px;
+        margin: 0 auto;
+    
+
+    }
+
+    .txt-ctn{
+      
+      position: relative;
+      top: 120px;
+      margin: 0 auto;
+
+    }
+    .sbt-cnt{
+        width: 300px;
+        margin: 0 auto;
+    }
+    .sm-ctn{
+        margin: 0 auto;
+    }
+
+    .img-msg-2{
+        width: 300px;
+    }
+    
 }
