--- a/my_portfolio/styles/site-plan.css
+++ b/my_portfolio/styles/site-plan.css
@@ -2,7 +2,7 @@
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a | */
 @import url('https://fonts.googleapis.com/css?family=IM+Fell+French+Canon+SC|Lato');
-@import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Roboto:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Oswald:500');
 :root {
   /* change the values below to your colors from your palette */
   --primary-color: #000000   ;
@@ -10,20 +10,26 @@ Fonts are separated by a | */
   --accent1-color:#B383F8;
   --accent2-color: #fff;
 
+  --primary-color: #000000   ;
+  --secondary-color: #527AE0 ;
+  --accent1-color:#B383F8;
+  --accent2-color: #fff;
+
+
   /* change the values below to your chosen font(s) */
-  --heading-font:Black Ops One;
+  --heading-font:Roboto;
   --paragraph-font: roboto, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: black;  /* headlines on a white background */ 
+  --headline-color-on-white: white;  /* headlines on a white background */ 
   --headline-color-on-color: #B383F8; /* headlines on a colored background */ 
   --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
   --paragraph-background-color: #396E94  ;
-  --nav-link-color: #white;
-  --nav-background-color: #B383F8;
+  --nav-link-color: white;
+  --nav-background-color:black;
   --nav-hover-link-color: white;
-  --nav-hover-background-color: black;
+  --nav-hover-background-color: #B383F8;
 }
 
 
