--- a/portafolio/css/styles.css
+++ b/portafolio/css/styles.css
@@ -5,6 +5,11 @@ body{
     padding: 0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+.full-container{
+  margin: 0 auto;
+  background-color: ;
+}
 .icon{
 width: 120px;
 position:relative;
