--- a/portafolio/css/styles.css
+++ b/portafolio/css/styles.css
@@ -8,7 +8,7 @@ body{
 
 .full-container{
   margin: 0 auto;
-  background-color: ;
+
 }
 .icon{
 width: 120px;
@@ -165,8 +165,9 @@ nav a:hover:before{
   left: 50px;
   bottom: 280px;
   gap:30px;
-  grid-row: 2/2;
+  grid-row: 3/2;
   grid-column: 1/4;
+  z-index: 1;
 
 
 }
