--- a/portafolio/css/projects.css
+++ b/portafolio/css/projects.css
@@ -1,7 +1,9 @@
 body{
     background-color: black;
+    margin: 0;
+    padding: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-
 
 
   .icon{
@@ -12,41 +14,173 @@ body{
     position: fixed;
     z-index: 1;
     }
+
+    .projects {
+      margin: 130px auto;
+      text-align: center; 
+    }
     
-    .projects{
-        margin: 200px auto;
-        width: 700px;
-       
-    }
-
-    .img-pj{
-        width: 400px;
-        border-radius: 30px;
-    }
-
-
-    .projects-img > img{
-      width: 350px;
-      height: auto;
-    }
-
-    .projects-img {
+    .container-projects {
       display: grid;
-      grid-template-columns: 
-      repeat(
-        auto-fit,
-        minmax(150px,1fr)
-      );
-      gap:32px;
-      background-color: rgba(103, 92, 92, 0.094);
-      padding: 50px;
-      border-radius: 38px;
+      grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+      gap: 6px;
+      justify-content: center; 
+      
     }
-    .svg-projects{
-      width: 35px;
-      height: 40px;
-      background-color: rgba(157, 0, 255, 0.281);
-      border-radius: 50%;
+    
+    .project {
+      margin:20px 30px;
+      background-color: rgba(82, 82, 82, 0.179);
+      padding:50px; 
+      border-radius: 30px;
       
 
+      
     }
+
+    
+    .project>img {
+      width: 100%; 
+      height: 200px; 
+      display: block;
+      border-radius:8px;
+      box-shadow: 12px 12px 12px rgba(0, 0, 0, 0.456);
+    }
+    
+    .projects-svg{
+      display:flex;
+    }
+    .svg-project{
+      width: 90px;
+      align-items: center;
+      margin-left: 10px;
+    }
+
+    .project-tittle{
+      margin-top: 20%;
+    }
+
+    .button-container {
+      display: flex;
+      justify-content: center; 
+      margin-top: 40px;
+      
+    }
+
+
+   .btn-git {
+      position: relative;
+      padding: 1em 1.8em;
+      outline: none;
+      border: 3px solid #303030;
+      background: #212121;
+      color:white;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      font-size: 15px;
+      overflow: hidden;
+      transition: 0.2s;
+      border-radius: 20px;
+      cursor: pointer;
+      font-weight: bold;
+      align-items: center;
+      display: flex;
+      height: 50px;
+      gap: 5px;
+      
+     }
+     
+     .btn-git:hover {
+      transition-delay: 0.6s;
+     }
+     
+     .btn-git span {
+      position: absolute;
+     }
+     
+     .btn-git span:nth-child(1) {
+      top: 0;
+      left: -100%;
+      width: 100%;
+      height: 2px;
+      background: linear-gradient(90deg, transparent, #ae00ff);
+     }
+     
+     .btn-git:hover span:nth-child(1) {
+      left: 100%;
+      transition: 0.7s;
+     }
+     
+     .btn-git span:nth-child(3) {
+      bottom: 0;
+      right: -100%;
+      width: 100%;
+      height: 2px;
+      background: linear-gradient(90deg, transparent, #001eff);
+     }
+     
+     .btn-git:hover span:nth-child(3) {
+      right: 100%;
+      transition: 0.7s;
+      transition-delay: 0.35s;
+     }
+     
+     .btn-git:nth-child(2) {
+      top: -100%;
+      right: 0;
+      width: 2px;
+      height: 100%;
+      background: linear-gradient(180deg, transparent, #ae00ff);
+     }
+     
+     .btn-git:hover span:nth-child(2) {
+      top: 100%;
+      transition: 0.7s;
+      transition-delay: 0.17s;
+     }
+     
+     .btn-git span:nth-child(4) {
+      bottom: -100%;
+      left: 0;
+      width: 2px;
+      height: 100%;
+      background: linear-gradient(360deg, transparent, #001eff);
+     }
+     
+     .btn-git:hover span:nth-child(4) {
+      bottom: 100%;
+      transition: 0.7s;
+      transition-delay: 0.52s;
+     }
+     
+     .btn-git:active {
+      background: #ae00af;
+      background: linear-gradient(to top right, #ae00af, #001eff);
+      color: #bfbfbf;
+      box-shadow: 0 0 8px #ae00ff, 0 0 8px #001eff, 0 0 8px #ae00ff;
+      transition: 0.1s;
+     }
+     
+     .btn-git:active span:nth-child(1) 
+     span:nth-child(2) 
+     span:nth-child(2) 
+     span:nth-child(2) {
+      transition: none;
+      transition-delay: none;
+     }
+     .button-container {
+      display: flex;
+      justify-content: center; /* Alinear el botón al centro horizontalmente */
+    }
+    .btn-git a {
+      display: flex;
+      align-items: center; /* Alinear elementos dentro del enlace verticalmente */
+      text-decoration: none; /* Eliminar subrayado del enlace */
+      /* Otros estilos que necesites */
+    }
+
+    .social-skl{
+      width: 30px;
+      
+    }
+
