--- a/portafolio/css/projects.css
+++ b/portafolio/css/projects.css
@@ -4,6 +4,67 @@ body{
     padding: 0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+nav{
+  width: 100%;
+  position: fixed;
+  top:20px;
+  text-align:center;
+  padding: 50px;
+  transition: background-color 0.3s ease; 
+  z-index: 1;
+  
+}
+nav a{
+  font-family: 'Oswald', sans-serif;
+  font-weight:500;
+  text-transform:uppercase;
+  text-decoration:none;
+  margin:0 15px;
+  font-size:20px;
+  letter-spacing:1px;
+  position:relative;
+  display:inline-block;
+  text-decoration: none;
+  color:white;
+
+}
+nav a:before{
+  content:'';
+  position: absolute;
+  height: 5px;
+  background:rgb(132, 85, 246);
+  top:130%;
+  animation:out 0.2s cubic-bezier(1, 0, 0.58, 0.97) 1 both;
+  text-decoration: none;
+  color:rgb(255, 255, 255);
+
+  
+}
+
+@keyframes in{
+  0%{
+    width: 0;
+    left:0;
+    right:auto;
+  }
+  100%{
+    left:0;
+    right:auto;
+    width: 100%;
+  }
+}
+@keyframes out{
+  0%{
+    width:100%;
+    left: auto;
+    right: 0;
+  }
+  100%{
+    width: 0;
+    left: auto;
+    right: 0;
+  }
+}
 
 
   .icon{
@@ -170,13 +231,12 @@ body{
      }
      .button-container {
       display: flex;
-      justify-content: center; /* Alinear el botón al centro horizontalmente */
+      justify-content: center;
     }
     .btn-git a {
       display: flex;
-      align-items: center; /* Alinear elementos dentro del enlace verticalmente */
-      text-decoration: none; /* Eliminar subrayado del enlace */
-      /* Otros estilos que necesites */
+      align-items: center; 
+      text-decoration: none; 
     }
 
     .social-skl{
