--- a/portafolio/css/styles.css
+++ b/portafolio/css/styles.css
@@ -439,11 +439,11 @@ footer {
     border: 0.1em solid #333;
     background-color: #1a1a1a;
     color: rgb(255, 255, 255);
-    font-family: "Courier New", Courier, monospace;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 19px;
     padding: 1.5em 1em;
-    width: 80%; /* Usamos porcentaje para ajustarse a diferentes pantallas */
-    max-width: 800px; /* Máximo ancho para evitar que se expanda demasiado en pantallas grandes */
+    width: 80%; 
+    max-width: 800px;
     height: 300px;
     margin: 100px auto;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
