--- a/portafolio/css/styles.css
+++ b/portafolio/css/styles.css
@@ -427,7 +427,7 @@ footer {
     45%,
     55% {
       width: 6.2em;
-    } /* adjust width based on content */
+    } 
     90%,
     100% {
       width: 0;
