--- a/portafolio/css/styles.css
+++ b/portafolio/css/styles.css
@@ -259,7 +259,7 @@ nav a:hover:before{
 .skills {
   display: block;
   padding: 40px;
-  background-image: linear-gradient(-525deg, #0000004a 20%, #67179282 50%, #390aa643 100% );
+  background-image: linear-gradient(-525deg, #0000001f 20%, #6717922c 50%, #390aa60c 100% );
   padding: 80px;
   position: relative;
   bottom:300px;
@@ -654,7 +654,7 @@ footer {
     
     }
     .tl-skills{
-      font-size: 35px;
+      font-size: 40px;
       text-align: left;
       position: relative;
       right: 50px;
@@ -665,11 +665,13 @@ footer {
 
     .skills {
       display: block;
-      background-image: linear-gradient(-525deg, #0000004a 20%, #67179282 50%, #390aa643 100%);
       position: relative;
       bottom: 300px;
       width: 80%; 
+      background-image: linear-gradient(-525deg, #00000086 20%, #67179284 50%, #390aa60c 100% );
+
     }    
+    
 
     .terminal-loader {
       width: 100%; 
@@ -696,7 +698,13 @@ footer {
   .svg-skills {
       width: 90px;
   }
-  
+}
+.skl-title{
+  font-size: 50px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: bold;
+  color: #ffffffda;
+
 }
 
   }
