--- a/portafolio/css/styles.css
+++ b/portafolio/css/styles.css
@@ -654,7 +654,7 @@ footer {
     
     }
     .tl-skills{
-      font-size: 40px;
+      font-size: 35px;
       text-align: left;
       position: relative;
       right: 50px;
@@ -704,6 +704,8 @@ footer {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: bold;
   color: #ffffffda;
+  position: relative;
+  right: 20px;
 
 }
 
