--- a/portafolio/css/projects.css
+++ b/portafolio/css/projects.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Oswald:500');
+
 body{
     background-color: black;
     margin: 0;
@@ -244,3 +246,35 @@ nav a:before{
       
     }
 
+
+
+    @media screen and (max-width: 480px) {
+
+      .projects{
+        
+        margin: 0 auto;
+        position: relative;
+        top: 10px;
+        
+
+      }
+
+      .btn-git:hover{
+        transform: scale(1.1);
+
+
+      }
+      
+      .tl-skills{
+        font-size: 40px;
+        text-align: center;
+        padding: 55px;
+      }
+      .tls-skills{
+        font-size: 55px;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-weight: bold;
+        color: rgba(230, 229, 229, 0.868);
+
+      }
+    }
