--- a/portafolio/css/styles.css
+++ b/portafolio/css/styles.css
@@ -274,6 +274,11 @@ nav a:hover:before{
   -webkit-background-clip: text;
   color: transparent; 
 }
+.skl-title{
+  font-size: 55px;
+  text-align: center;
+
+}
 
 .skl-div{
 text-align: center;
@@ -281,14 +286,13 @@ padding: 15px;
 position: relative;
 top: 50px;
 }
-h2{
-  position: relative;
-  top: 30px;
-}
 #text-container {
   font-size: 28px; 
   
   
+}
+.svg-skills:hover{
+  transform: scale(1.3);
 }
 
 
@@ -568,6 +572,9 @@ footer {
 }
   
   @media screen and (max-width: 480px) {
+    body{
+      max-width:nonex;
+    }
 
     nav{
       display: none;
@@ -657,7 +664,7 @@ footer {
       font-size: 35px;
       text-align: left;
       position: relative;
-      right: 50px;
+      right: 170px;
 
       
       
@@ -666,7 +673,7 @@ footer {
     .skills {
       display: block;
       position: relative;
-      bottom: 300px;
+      bottom: 200px;
       width: 80%; 
       background-image: linear-gradient(-525deg, #00000086 20%, #67179284 50%, #390aa60c 100% );
 
@@ -687,25 +694,35 @@ footer {
       justify-content: start; 
       align-items: center; 
       flex-wrap: wrap; 
-      margin: auto;
+      margin:0 auto;
       position: relative;
       right: 65px;
   }
-  
+  .svg-skills:hover{
+    transform: scale(1.3);
+  }
   .skl-div > * {
       flex: 0 0 calc(33.33% - 0.5px); 
   
   .svg-skills {
       width: 90px;
   }
+  
 }
+.svg-skills {
+  width: 90px;
+  margin-top: 90px;
+}
+
+
 .skl-title{
   font-size: 50px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: bold;
   color: #ffffffda;
   position: relative;
-  right: 20px;
+  right: 70px;
+  top: 140px;
 
 }
 
