--- a/portafolio/css/projects.css
+++ b/portafolio/css/projects.css
@@ -103,12 +103,19 @@ nav a:before{
 
     
     .project>img {
-      width: 100%; 
-      height: 200px; 
-      display: block;
-      border-radius:8px;
-      box-shadow: 12px 12px 12px rgba(0, 0, 0, 0.456);
-    }
+      
+        width: 100%;
+        max-width: 500px;
+        height: 200px;
+        display: block;
+        border-radius: 8px;
+        box-shadow: 12px 12px 12px rgba(0, 0, 0, 0.456);
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 10px;
+      }
+      
+    
     
     .projects-svg{
       display:flex;
@@ -245,10 +252,19 @@ nav a:before{
       width: 30px;
       
     }
+    @media screen and (max-width: 768px ) {
+        
+
+    }
 
 
 
     @media screen and (max-width: 480px) {
+      .container-projects{
+        position: relative;
+        bottom: 210px;
+      }
+      
 
       .projects{
         
@@ -265,16 +281,4 @@ nav a:before{
 
       }
       
-      .tl-skills{
-        font-size: 40px;
-        text-align: center;
-        padding: 55px;
-      }
-      .tls-skills{
-        font-size: 55px;
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        font-weight: bold;
-        color: rgba(230, 229, 229, 0.868);
-
-      }
     }
