--- a/portafolio/css/styles.css
+++ b/portafolio/css/styles.css
@@ -309,6 +309,107 @@ top: 50px;
 
 }
 
+
+/*booton*/
+.signupBtn {
+  width: 120px;
+  height: 40px;
+  border-radius: 30px;
+  border: none;
+  display: flex;
+  left: 50%;
+  right: 50%;
+  transform: translate(-50%);
+  align-items: center;
+  justify-content: flex-start;
+  padding-left: 13px;
+  gap: 9px;
+  color: white;
+  background: linear-gradient(to right,rgb(21, 21, 23),rgb(75, 69, 165));
+  position: relative;
+  cursor: pointer;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.212);
+
+}
+
+.arrow {
+  position: absolute;
+  right: 7.5px;
+  background-color: rgb(9, 9, 9);
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 30px;
+  transition: all .5s ease;
+}
+
+.signupBtn:hover .arrow {
+  width: calc(120px - (7.5px)*2);
+}
+
+
+
+
+
+
+
+.certificates {
+  position: relative;
+  margin: 100px auto;
+  border: 11px solid rgba(255, 255, 255, 0.065);
+  border-radius: 40px;
+  padding: 20px;
+  width: 80%; /* Adjust the width for responsiveness */
+  max-width: 600px; /* Set a maximum width if needed */
+  top: -160px;
+  text-align: center; /* Center text within the container */
+}
+
+.tl-certificates {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 4.75vw; 
+  max-width: 100%; 
+  padding: 1px;
+}
+
+.check {
+  width: 3vw; /* Adjust the checkmark size based on viewport width */
+}
+
+.tl-crt {
+  position: relative;
+  bottom: 20px; /* Adjust the bottom spacing as needed */
+}
+
+#doc-certificate {
+  display: none;
+  justify-content: center; /* Center images horizontally */
+  align-items: center; /* Center images vertically */
+}
+
+.img-certificate {
+  max-width: 300px; /* Make images responsive */
+  width: 100%;
+  height: 150px; /* Set a fixed height for all images */
+  border-radius: 30px;
+  margin: 60px 5px;
+  border: 2px solid rgba(51, 74, 159, 0.296);
+}
+
+.img-certificate:hover{
+  cursor:pointer;
+  transform: scale(1.5); /* Increase size by 10% on hover */
+  transition: transform 2.1s ease;
+  
+}
+
+.certificate-p{
+ font-size: 20px;
+ font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 /*Footer*/
 
 footer {
@@ -666,7 +767,6 @@ footer {
     .img-banner{
       display: block;
       position: relative;
-      left: 15px;
   
     }
   
@@ -812,13 +912,79 @@ footer {
 
 }
 
-.tls-skills{
-  font-size: 45px;
-  position: absolute;
-  top: -450px;
-  left: -10px;
-  width: 380px;
+.certificates {
+  position: relative;
+  margin: 100px auto;
+  border: 11px solid rgba(255, 255, 255, 0.065);
+  border-radius: 40px;
   padding: 20px;
+  width: 80%; /* Adjust the width for responsiveness */
+  max-width: 600px; /* Set a maximum width if needed */
+  top: -430px;
+  text-align: center; /* Center text within the container */
+}
+
+.tl-certificates{
+  font-size: 35px;
+  width: 40px;
+}
+
+
+.check {
+  width: 7vw; 
+}
+.tl-certificates{
+  width: 120%;
+}
+
+.img-certificate:hover{
+  cursor:pointer;
+  transform: scale(1.2); /* Increase size by 10% on hover */
+  transition: transform 2.1s ease;
   
 }
+.signupBtn{
+  position: relative;
+  left: 50%;
+  right: 50%;
+  transform: translateX(-50%);
+  
+}
+.certificates {
+max-width: 500px;
+height: 100%;
+}
+
+.sm-svge{
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 23px;
+  text-align: center;
+  position: relative;
+  right: 5px;
+}
+.svg-cnte{
+  position:relative
+}
   }
+
+
+
+
+
+
+
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
